--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*----side-bar-----*/
+
+.side-bar{
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  padding: 20px;
+}
+
+.header{
+  display: flex;
+  align-items: center;
+  height: 60px;
+  width: 100%;
+  justify-content: space-between;
+
+}
+
+.plus-btn {
+  padding: 3px 8px;
+  background-color: blue;
+  opacity: .6;
+  border: 1px solid transparent;
+  color: aliceblue;
+  font-size: x-large;
+  border-radius: 5px;
+  font-weight: 500;
+}
+.notes{
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  width: 100%;
+  height: auto;
+}
+
+.note{
+  width: 95%;
+  padding: 10px 0px;
+  padding-left: 5%;
+  text-align: center;
+  text-overflow: ellipsis;
+  display: flex;
+  font-size: large;
+  align-items: center;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.selected-note{
+  background-color: blue;
+  opacity: .6;
+  color: aliceblue;
+
+  
 }
