--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,17 @@
   text-align: center;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  padding: 20px;
+  
+}
+
+.container {
+  width: 70%;
+  border: .5px solid #282c34 ;
+  display: flex;
+  justify-content: center;
+  align-items: start;
 }
 
 @media (prefers-reduced-motion: no-preference) {
