--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 /*----side-bar-----*/
 
 .side-bar{
   display: flex;
   flex-direction: column;
   width: 200px;
-  padding: 20px;
 }
 
 .header{
@@ -29,9 +29,10 @@ body {
   padding: 3px 8px;
   background-color: blue;
   opacity: .6;
+  cursor: pointer;
   border: 1px solid transparent;
   color: aliceblue;
-  font-size: x-large;
+  font-size: large;
   border-radius: 5px;
   font-weight: 500;
 }
